--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
+``` this is an edited piece of the code ```
 
 <script>
   // Initialization
